First commit test. Site header included.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<a href="https://instagram.com/explore/tags/100daysofcommutetherapy/ "target="_blank"/><img src="images/dribbble.png" class="social"/>
 		</a>
 		
-		<div id="title"><b>ARTDIRECTOR/ DESIGNER/ ARTIST</b>
+		<div id="title"><b>JAMASA MCPHERSON</b>
 		</div>
 	</section>
 </body>
