added socialBar and firstScroll section

--- a/index.html
+++ b/index.html
@@ -5,16 +5,27 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<section id="header">
+	<div id="socialBar">
 		<a href="https://www.linkedin.com/in/jamasa "target="_blank"><img src="images/linkedin.png" class="social"/>
 		</a>
 		<a href="https://instagram.com/explore/tags/100daysofcommutetherapy/ "target="_blank"/><img src="images/instagram.png" class="social"/>
 		</a>
-		<a href="https://instagram.com/explore/tags/100daysofcommutetherapy/ "target="_blank"/><img src="images/dribbble.png" class="social"/>
+		<a href="https://dribbble.com/theecreativedir"target="_blank"/><img src="images/dribbble.png" class="social"/>
 		</a>
+	</div>
+
+	<section id="header">
 		
-		<div id="title"><b>ART DIRECTOR/ DESIGNER/ ARTIST</b>
+		<div id="title"><b>ART DIRECTOR - DESIGNER - ARTIST</b>
 		</div>
-	</section>
+	</section>		
+		
+		<p class="sectionTitle"><b>PORTFOLIO</b></p>
+
+
+	<footer class="clearfix"><i>Copyright &copy; Jamasa McPherson 2015</i>
+	</footer>
+
+
 </body>
 </html>
