--- a/index.html
+++ b/index.html
@@ -3,29 +3,34 @@
 <head>
 	<title>Jamasa McPherson Portfolio</title>
 	<link rel="stylesheet" href="css/style.css">
+
+	<style>
+		#header{
+			width:100%;
+			height:650px;
+			background-image: url("images/bgHeader2.jpg");
+			background-color:grey;
+			background-repeat:no-repeat;
+			margin-bottom:50px;
+		}
+		
+	</style>
+
 </head>
 <body>
-	<div id="socialBar">
-		<a href="https://www.linkedin.com/in/jamasa "target="_blank"><img src="images/linkedin.png" class="social"/>
-		</a>
-		<a href="https://instagram.com/explore/tags/100daysofcommutetherapy/ "target="_blank"/><img src="images/instagram.png" class="social"/>
-		</a>
-		<a href="https://dribbble.com/theecreativedir"target="_blank"/><img src="images/dribbble.png" class="social"/>
-		</a>
-	</div>
-
 	<section id="header">
-		
-		<div id="title"><b>ART DIRECTOR - DESIGNER - ARTIST</b>
+		<div id="socialBar">
+			<a href="https://www.linkedin.com/in/jamasa "target="_blank"><img src="images/linkedin.png" class="social"/></a>
+			<a href="https://instagram.com/explore/tags/100daysofcommutetherapy/ "target="_blank"/><img src="images/instagram.png" class="social"/></a>
+			<a href="https://dribbble.com/theecreativedir"target="_blank"/><img src="images/dribbble.png" class="social"/></a>
 		</div>
 	</section>		
 		
-		<p class="sectionTitle"><b>PORTFOLIO</b></p>
+		<p class="sectionTitle"><b>ART DIRECTOR. DESIGNER. ARTIST.</b></p>
 
 
 	<footer class="clearfix"><i>Copyright &copy; Jamasa McPherson 2015</i>
 	</footer>
-
 
 </body>
 </html>
