Added about page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Jamasa McPherson Portfolio</title>
 	<link rel="stylesheet" href="css/style.css">
-
+<!--Cannot figure out why bg header image will not work when in external CSS. Alt fix for now-->
 	<style>
 		#header{
 			width:100%;
@@ -13,21 +13,35 @@
 			background-repeat:no-repeat;
 			margin-bottom:50px;
 		}
-		
 	</style>
 
 </head>
 <body>
+	<div id="socialBar">
+		<a href="https://www.linkedin.com/in/jamasa "target="_blank"><img src="images/linkedin.png" class="social"/></a>
+		<a href="https://instagram.com/explore/tags/100daysofcommutetherapy/ "target="_blank"/><img src="images/instagram.png" class="social"/></a>
+		<a href="https://dribbble.com/theecreativedir"target="_blank"/><img src="images/dribbble.png" class="social"/></a>
+	</div>
+
+	<nav>
+		<ul>
+			<li><a href="about.html"/>ABOUT</li>
+			<li>PORTFOLIO</li>
+			<li>THE 100 DAY PROJECT</li>
+		</ul>
+	</nav>
+
 	<section id="header">
-		<div id="socialBar">
-			<a href="https://www.linkedin.com/in/jamasa "target="_blank"><img src="images/linkedin.png" class="social"/></a>
-			<a href="https://instagram.com/explore/tags/100daysofcommutetherapy/ "target="_blank"/><img src="images/instagram.png" class="social"/></a>
-			<a href="https://dribbble.com/theecreativedir"target="_blank"/><img src="images/dribbble.png" class="social"/></a>
-		</div>
 	</section>		
 		
-		<p class="sectionTitle"><b>ART DIRECTOR. DESIGNER. ARTIST.</b></p>
+		<h1>ART DIRECTOR. DESIGNER. ARTIST.
+		</h1>
 
+		<h3 class="clearfix">Latest</h3>
+
+	<img src="images/100day_latest.jpg" class="thumb"/>
+	<img src="images/100day_latest.jpg" class="thumb"/>
+	<img src="images/100day_latest.jpg" class="thumb"/>
 
 	<footer class="clearfix"><i>Copyright &copy; Jamasa McPherson 2015</i>
 	</footer>
