added About page.

--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 	<div id="socialBar">
+		<div id="logoJM"><a href="index.html" class="logoJM"/>.JM</a></div>
+
 		<a href="https://www.linkedin.com/in/jamasa "target="_blank"><img src="images/linkedin.png" class="social"/></a>
 		<a href="https://instagram.com/explore/tags/100daysofcommutetherapy/ "target="_blank"/><img src="images/instagram.png" class="social"/></a>
 		<a href="https://dribbble.com/theecreativedir"target="_blank"/><img src="images/dribbble.png" class="social"/></a>
@@ -13,11 +15,72 @@
 
 	<nav>
 		<ul>
-			<li><a href="about.html"/>ABOUT</li>
-			<li>PORTFOLIO</li>
-			<li>THE 100 DAY PROJECT</li>
+			<li><a href="about.html"/>ABOUT</a></li>
+			<li><a href="portfolio.html"/>PORTFOLIO</a></li>
+			<li><a href="100days.html"/>THE 100 DAY PROJECT</a></li>
 		</ul>
 	</nav>
+
+<div id="containerAbout">
+	<section id="sideLeft" class="clearfix">
+		<img src="images/jmPhoto.jpg" class="About"/>
+	</section>
+
+	<section id="sideRight">
+		<p class="resume">
+			<h1>RESUME</h1>
+			Digital Designer
+			<br/>
+			Spike TV | October 2014 - Present
+			<br/>
+			Spike and Comedy Central digital asset design.
+			Spike App redesign, which launched March 31, 2015.
+			Spike.com web asset design, photo-editing, page comps, layout.
+			<br/>
+			<br/>
+			Art Director
+			<br/>
+			The Gate Worldwide| June 2014 - October 2014
+			<br/>
+			Collaborate with Creative Directors and production team to execute campaign deliverables,
+			including: storyboards, wireframes,
+			mockups, asset design, illustration, web design, and branding.
+			<br/>
+			<br/>
+			Interactive Designer
+			<br/>
+			Monster Media |October 2012 - May 2014
+			<br/>
+			Design wireframes, mockups, storyboards and prototypes to communicate
+			proposed interactive concepts.
+			UX and UI design for out-of-home digital experiences, such as digital kiosks, billboards and
+			walls, photo-booths, and projections.
+			Lead a team of Interaction Designers, Visual Artist, Art Directors, Developers and Technologist
+			to create first to market interactive
+			experiences.
+			<br/>
+			<br/>
+			<h4>EDUCATION</h4>
+			Master of Fine Arts
+			<br/>
+			Media Design, Advertising
+			<br/>
+			Full Sail University, Feb 2013
+			<br/>
+			<br/>
+			Bachelor of Fine Arts
+			<br/>
+			3D Animation, Marketing
+			<br/>
+			University of Central Florida, May 2010
+			<br/>
+			<br/>
+			Email: jamasa.mcpherson[at]gmail[dot]com</p>
+	</section>
+</div>
+
+	<footer class="clearfix"><i>Copyright &copy; Jamasa McPherson 2015</i>
+	</footer>
 
 </body>
 
