--- a/portfolio.html
+++ b/portfolio.html
@@ -1,24 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Jamasa McPherson Portfolio</title>
+	<title>Portfolio | Jamasa McPherson</title>
 	<link rel="stylesheet" href="css/style.css">
-<!--Cannot figure out why bg header image will not work when in external CSS. Alt fix for now-->
-	<style>
-		#header{
-			width:100%;
-			height:650px;
-			background-image: url("images/bgHeader2.jpg");
-			background-color:grey;
-			background-repeat:no-repeat;
-			margin-bottom:50px;
-		}
-	</style>
-
 </head>
 <body>
 	<div id="socialBar">
 		<div id="logoJM"><a href="index.html" class="logoJM"/>.JM</a></div>
+
 		<a href="https://www.linkedin.com/in/jamasa "target="_blank"><img src="images/linkedin.png" class="social"/></a>
 		<a href="https://instagram.com/explore/tags/100daysofcommutetherapy/ "target="_blank"/><img src="images/instagram.png" class="social"/></a>
 		<a href="https://dribbble.com/theecreativedir"target="_blank"/><img src="images/dribbble.png" class="social"/></a>
@@ -31,21 +20,3 @@
 			<li><a href="100days.html"/>THE 100 DAY PROJECT</a></li>
 		</ul>
 	</nav>
-
-	<section id="header">
-	</section>		
-		
-		<h1>ART DIRECTOR. DESIGNER. ARTIST.
-		</h1>
-
-		<h3 class="clearfix">Latest</h3>
-
-	<img src="images/100day_latest.jpg" class="thumb"/>
-	<img src="images/100day_latest.jpg" class="thumb"/>
-	<img src="images/100day_latest.jpg" class="thumb"/>
-
-	<footer class="clearfix"><i>Copyright &copy; Jamasa McPherson 2015</i>
-	</footer>
-
-</body>
-</html>
