added portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,3 +20,19 @@
 			<li><a href="100days.html"/>THE 100 DAY PROJECT</a></li>
 		</ul>
 	</nav>
+
+	<div id="portfolioWrap">
+		<a href="inkmaster.html"><img src="images/inkMaster.jpg"/></a>
+		<a href="inkmaster.html"><img src="images/lsb.jpg"/></a>
+		<a href="tut.html"><img src="images/tut.jpg"/></a>
+		<a href="lymBillboard.html"><img src="images/lymBillboard.jpg"/></a>
+		<a href="spikeApp.html"><img src="images/spikeApp.jpg"/></a>
+		<a href="inkmaster.html"><img src="images/inkMaster.jpg"/></a>
+		<a href="inkmaster.html"><img src="images/inkMaster.jpg"/></a>
+		<a href="inkmaster.html"><img src="images/inkMaster.jpg"/></a>
+		<a href="inkmaster.html"><img src="images/inkMaster.jpg"/></a>
+	</div>
+
+	<footer class="clearfix"><i>Copyright &copy; Jamasa McPherson 2015</i>
+	</footer>
+
