added links to portfolio Lastest images section

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
 		<h3 class="clearfix">Latest</h3>
 
-	<img src="images/100day_latest.jpg" class="thumb"/>
-	<img src="images/100day_latest.jpg" class="thumb"/>
-	<img src="images/100day_latest.jpg" class="thumb"/>
+	<a href="about.html"><img src="images/100day_latest.jpg" class="thumb"/></a>
+	<a href="100days.html"><img src="images/100day_latest.jpg" class="thumb"/></a>
+	<a href="updates.html"><img src="images/100day_latest.jpg" class="thumb"/></a>
 
 	<footer class="clearfix"><i>Copyright &copy; Jamasa McPherson 2015</i>
 	</footer>
